corrections and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@
   border-radius: 20px;
   margin-top: 20px;
   margin-left: 60px;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
 
   max-width: 400px;
   padding: 20px;
-  padding-right: 50;
+  padding-right: 50px;
   background: linear-gradient(#8ec5fc, #e0c3fc);
 }
 
@@ -26,8 +26,6 @@ h6 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   color: #f9fbfd;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
   text-transform: capitalize;
 }
 p {
@@ -35,9 +33,11 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
   color: #f9fbfd;
-  margin-top: -10px;
   margin-right: 8px;
   font-size: 18px;
+}
+.feelsLike {
+  color: red;
 }
 .celsius {
   position: relative;
@@ -55,9 +55,6 @@ div i {
   color: rgb(2, 2, 170);
   font-size: 20px;
 }
-.search-form {
-  margin-bottom: 20px;
-}
 .prescipitation {
   color: rgb(77, 165, 238);
   font-size: 20px;
@@ -74,6 +71,8 @@ div i {
   margin: 20px;
 }
 .coded {
+  position: relative;
+  margin-left: 62px;
   font-size: 13px;
   color: rgb(80, 193, 238);
 }
